style.css
/*
*{
    box-sizing: border-box;
     margin: 0; 
   }*/

/*.logo{
position: absolute;
top: 0% */

   /* width: 20%; /* scale the logo */
    /*min-width: 200px; 
    max-width: 200px;/* but make sure it's at least 200px */
  
html {
        scroll-behavior: smooth;
      }

img {
    max-width: 100%;
}
/*FONT SIZES Coverted from pixels to em */
h1{
    font-size: 2.5em;
}
h2{
    font-size: 1.875em;
}
h3{
    font-size: 1em;
}

.header{
    display: flex;
    flex-flow: wrap;
    align-items: center;
    max-height: 200px;
    max-width: 600px;
    justify-content: space-between;
    margin-left: 2px;

}
.logo{
    display: flex;
    max-width: 200px;

}

.logo {
    order: -2;
    width: 50%

}


.site-nav ul {
    display: flex;
    justify-content: space-around;
    list-style: none;
    padding: 0 0 0 0;
}

/* .site-nav li {
    display: flex;
    flex-direction: row;
    flex-grow: 1; */
    /* width: 100%; */
    /*object-position: 1rem;
    padding: 0 .5% 0 .5%;
    
}*/

.line-header{
    order:-1;
    width: 100%;
    color: #d7d7d7;
    margin-left: 6%;
    margin-right:5%;
    display: block;
} 
.line-header hr{
    padding: 0;
    margin: 0;

}

.primary-nav {
    order: 0;
    width: 100%;

}
.primary-nav a {
    color:#e2574c;
    font-weight: 500;
    text-decoration: none;
    display: inline-block;
    padding: 1.625 1 1 1em;
    margin-top: 0;
    
}

.cart {
    /*text-align: right;*/
    max-width: 100px;
  
  }
  .cart {
    max-width: 100px;
    order:-1;
    width: 50%;
    display: flex;
 
  }

/* Banner Section */

.banner{
   
    text-align: center;
    height: 400px;
    max-width: 1240px;
    position: relative;
     }
.banner {
        background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(images/banner-girl.png), url(images/flower-bkgd.jpg);
        background-position: center, center 60px, center;
        background-repeat: no-repeat,no-repeat, repeat;
        background-size: contain, contain, cover;
      }
     .banner_text{
         position: absolute;
         top: 52%;
         left: 50%;
         transform: translate(-50%, -50%);
    

     }
.banner h1{
    color: #FFFFFF;
    font-weight: lighter;
    margin: 0em;

     }

.banner h3 span{
    color:#FFFFFF;
    text-transform: uppercase;
}

body{
    font-family: "Raleway", Arial, sans-serif;
    font-weight: 300;
    font-size: 0.875rem;
        
    
}


h1, h2, h3, h4 {

    font-family: "Playfair Display";
    color:  #2d2d2d;
}



p {
    font-family: "Raleway";
    color: #2d2d2d;

}
.handcrafted p{
line-height: 3rem;
text-align: center;
margin: 0 2rem;
font-weight: 100;
font-size: 1.5rem;
}
.handcrafted h3{

    text-align: center;
    font-size: 3rem;
}

.handcrafted h3 span{
    font-weight: 100;
    font-style: italic;
}
.handcrafted{
    margin-top: 5em;
    margin-bottom: 5em;
}
.container{
    max-width: 600px;
    margin: 0px auto;
    text-align: center;

}
/* CLOTHING CATEGORY BOXES SECTION*/

.product-categories{
    box-sizing: border-box;
    display: flex;

}

.clothing-categories {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    
}
.clothing-categories a{
    text-decoration: none;
    color: #FFFFFF;
    text-transform: uppercase;

}

/* the selector > will only get the first level of chld elements and not go further
example if you had more divs nested it would only affect the children */
/* .clothing-categories > div {
    border: 2px solid white;
} */
.clothing-categories > div {
    border: 2px solid #FFFFFF;
    display: flex;
    justify-content: center;
    align-items: center;
}

.mens {
    background: url(images/mens-category.jpg);
    background-repeat: no-repeat;
    background-size: contain;
    text-align: center;
    width: 100vw;
    height: 50vw;
    flex-grow: 2;
    box-sizing: border-box;
    /* margin-bottom: 1rem; */
  }
  .trends {
    background: url(images/trends-category.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    text-align: center;
    width: 50vw;
    height: 50vw;
    flex-grow: 1;
    box-sizing: border-box;
    /* margin-bottom: 1rem; */
  }

.glasses {
  background: url(images/glasses-category.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; 
  text-align: center;
  width: 50vw;
  height: 50vw;
    flex-grow: 1;
    box-sizing: border-box;
    /* margin-bottom: 1rem; */
}
.sale {
    background: url(images/sale-category.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    text-align: center;
    width: 50vw;
    height: 50vw;
    flex-grow: 1;
    box-sizing: border-box;
   
  }
  .bags {
    background: url(images/bags-category.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    text-align: center;
    width: 50vw;
    height: 50vw;
    flex-grow: 1;
    box-sizing: border-box;
    
  }
  .womens {
    background: url(images/womens-category.jpg);
    background-repeat: no-repeat;
    background-size: contain;
    text-align: center;
    width: 100vw;
    height: 50vw;
    position: relative;
    flex-grow: 2;
    box-sizing: border-box;
    /* margin-top: 1rem */
  }
  .most-loved h2{
      text-align: center;
      font-size: 3rem;
  }
  .most-loved h2 span{
      font-weight: lighter;
      font-style: italic;

  }
/*carousel*/
.img {
width:100%
}
.carousel-cell{
    width: 100%;
}

/* SIGNUP SECTION*/

.signup{
    background: url(images/wave-bkgd.jpg);
    background-position: bottom;
    background-repeat: no-repeat;
    height: 60vw;
    width: 100vw;
    min-height: 320px;
    text-align: center;
    max-width: 1240px;


}
/*
.signup-content{
    text-align: center;
    max-width: 1240px;
    
}*/
.signup_text{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 730px;
}
.signup p{
    color: #FFFFFF;
    line-height: 2em;
    padding-left: 1em;
    padding-right: 1em;
    font-size: 1.3em;
    font-weight: 500;
    display: inline-block;
    min-height: fit-content;

    
}
.signup h2{
    color: #FFFFFF;
    text-emphasis-color: gray;
    font-size: 2.5em;
    padding-top: 1.5em;

}
.signup h2 span{
    font-weight: lighter;
    font-style: italic;
}
.form-container{
    margin-left: 100px;
    display: flex;

    
}

form{
    width: 100%;
    max-width: 600px;
    height: 2em;
    display: flex;
    flex: 2;
    

}

input {
    -webkit-appearance: textfield;
    background-color: #FFFFFF;
    -webkit-rtl-ordering: logical;
    cursor: text;
    border-radius: 25px;
    padding: 10px; 
    max-width: 400px;
    width: 70%;;
    display: flex;
    flex-direction: column;
  /*height: 10px; */
}
/*input submit {
    max-width: 100px;
    
  }*/
upload-button, button {
   
    background: #e2574c;
    border-radius: 25%;
    right: 140px;
    width: 30%;
    max-width: 133px;
    max-height: 28px;
    position: relative;
    align-self: center;

    
}
/* Footer Section */

.aloha-footer{
    
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    background-color: #242424



}
footer{
    display: block;
    padding-top: 1rm;
}
.contact p {
    color: #FFFFFF;
}
.contact p span{
    color: #969696;

}
.social, .contact {
    width: 100%;
    text-align: center;
}
.social{
    max-width: 400px;
    margin: 0 auto;
}
.social span {
    display: none;
}
.social li{
    list-style: none;
    color: #FFFFFF;
    

}
.social li a{
    color: #FFFFFF
}
/*
.social li i{
    padding-right: 0.25em;
}*/
 
.contact{
    max-width: 400px;
    margin: 0 auto;  
}

/*
.contact {
    display: block;
    background-color: black;
    font-display: white;

}
.social li {
    display: block;
    background-color: black;
    font-display: white;

}*/
/* .products{
    display: inline;
}
 */
 @media screen and (min-width:600px){
     .logo {
        order:0;
        width: 30%
     }
     .primary-nav{
        width: 40%;
        display: flex;
     }
     .cart{
        order: 2;
        width: 30%;
     }
     body{
        font-family: "Raleway", Arial, sans-serif;
        font-weight: 500;
        font-size: 1rem;
    }

.header{
    flex-flow: nowrap;
    max-width: 1240px;
    align-items: center;

}
.line-header{
    display: none;
}
    .site-nav li {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    width: 100%; 
    /*object-position: 1rem;*/
    padding: 0 4% 0 4%;
    
}
.handcrafted{
    max-width: 600px;
}
.handcrafted p{
    color: #969696;
    font-weight: 500;
    font-size: 1rem;
    }

.signup {

    max-height: 300px;
}

.signup h2{

    padding-top: .7em;
}

.signup p {

    font-size: 1em;
    max-width: 730px;
    padding-bottom: 1em;
    
}
    .social span {
        display: inline-block;
    }

    .social, .contact {
        width: 50%;
        text-align: left;
    }
    .carousel-cell{
width: 25%;
    }
   
    }
   
    
 

